# MVC_Example

./: CMakeLists.txt  README.md
Test/: makefile  my_program
header/: MVC_Manage_Folder.hpp
include/Model/: MediaFile.hpp  Metadata.hpp  PlayMedia.hpp  Playlist.hpp
include/View/: MediaView.hpp  PlaylistView.hpp
src/: MVC_Manage_Folder.cpp  keyBoardEvent.cpp  main.cpp  ttf.cpp
